--- a/react-redux-app/src/index.css
+++ b/react-redux-app/src/index.css
@@ -1,13 +1,3 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  background-image: url('https://vignette.wikia.nocookie.net/custompokedex/images/5/50/Wiki-background/revision/latest?cb=20140624163314');
 }
